# aider4IntraLLM

./: .gitignore  PKG-INFO  README.md  README_aider.md  README_claude_dev.md
software-agent-sdk-main/openhands-agent-server/: pyproject.toml
software-agent-sdk-main/openhands-agent-server/openhands/agent_server/: README.md  __main__.py  agent-server.spec  api.py  bash_router.py  bash_service.py  config.py  conversation_router.py  conversation_service.py  dependencies.py  desktop_router.py  desktop_service.py  env_parser.py  event_router.py  event_service.py  file_router.py  git_router.py  logging_config.py  middleware.py  models.py  openapi.py  pub_sub.py  server_details_router.py  skills_router.py  skills_service.py  sockets.py  tool_preload_service.py  tool_router.py  utils.py  vscode_router.py  vscode_service.py
software-agent-sdk-main/openhands-agent-server/openhands/agent_server/docker/: Dockerfile  build.py
software-agent-sdk-main/openhands-sdk/: pyproject.toml
software-agent-sdk-main/openhands-sdk/openhands/sdk/: __init__.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/agent/: __init__.py  agent.py  base.py  utils.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/context/: README.md  __init__.py  agent_context.py  view.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/conversation/: __init__.py  base.py  conversation.py  conversation_stats.py  event_store.py  events_list_base.py  exceptions.py  fifo_lock.py  persistence_const.py  response_utils.py  secret_registry.py  state.py  stuck_detector.py  title_utils.py  types.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/critic/: __init__.py  base.py  result.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/event/: __init__.py  base.py  condenser.py  conversation_error.py  conversation_state.py  llm_completion_log.py  token.py  types.py  user_action.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/git/: cached_repo.py  exceptions.py  git_changes.py  git_diff.py  models.py  utils.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/hooks/: __init__.py  config.py  conversation_hooks.py  executor.py  manager.py  types.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/io/: __init__.py  base.py  cache.py  local.py  memory.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/llm/: __init__.py  llm.py  llm_registry.py  llm_response.py  message.py  streaming.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/logger/: __init__.py  logger.py  rolling.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/mcp/: __init__.py  client.py  definition.py  exceptions.py  tool.py  utils.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/observability/: __init__.py  laminar.py  utils.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/plugin/: __init__.py  fetch.py  loader.py  plugin.py  types.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/secret/: __init__.py  secrets.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/security/: __init__.py  analyzer.py  confirmation_policy.py  llm_analyzer.py  risk.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/tool/: __init__.py  registry.py  schema.py  spec.py  tool.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/utils/: __init__.py  async_executor.py  async_utils.py  cipher.py  command.py  deprecation.py  github.py  json.py  models.py  paging.py  pydantic_diff.py  pydantic_secrets.py  truncate.py  visualize.py
software-agent-sdk-main/openhands-sdk/openhands/sdk/workspace/: __init__.py  base.py  local.py  models.py  workspace.py
software-agent-sdk-main/openhands-tools/: pyproject.toml
software-agent-sdk-main/openhands-tools/openhands/tools/: __init__.py
software-agent-sdk-main/openhands-tools/openhands/tools/apply_patch/: __init__.py  core.py  definition.py
software-agent-sdk-main/openhands-tools/openhands/tools/browser_use/: __init__.py  definition.py  impl.py  impl_windows.py  logging_fix.py  server.py
software-agent-sdk-main/openhands-tools/openhands/tools/delegate/: __init__.py  definition.py  impl.py  registration.py  visualizer.py
software-agent-sdk-main/openhands-tools/openhands/tools/file_editor/: __init__.py  definition.py  (+3 more)
software-agent-sdk-main/openhands-workspace/: pyproject.toml
software-agent-sdk-main/openhands-workspace/openhands/workspace/: __init__.py
(+690 files in other folders)
