[project]
name = "openhands-workspace"
version = "1.10.0"
description = "OpenHands Workspace - Docker and container-based workspace implementations"

requires-python = ">=3.12"
dependencies = [
    "openhands-sdk",
    "openhands-agent-server",
    "pydantic>=2.11.7",
]

[project.urls]
Source = "https://github.com/OpenHands/software-agent-sdk"
Homepage = "https://github.com/OpenHands/software-agent-sdk"
Documentation = "https://docs.openhands.dev/sdk"
"Bug Tracker" = "https://github.com/OpenHands/software-agent-sdk/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["openhands.workspace*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed"]
